; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_udbg_16550.c_udbg_uart_out_pio.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_udbg_16550.c_udbg_uart_out_pio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@udbg_uart = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@udbg_uart_stride = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @udbg_uart_out_pio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @udbg_uart_out_pio(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @udbg_uart, i32 0, i32 0), align 8
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @udbg_uart_stride, align 4
  %9 = mul i32 %7, %8
  %10 = zext i32 %9 to i64
  %11 = add nsw i64 %6, %10
  %12 = call i32 @outb(i32 %5, i64 %11)
  ret void
}

declare dso_local i32 @outb(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
